--- a/main.html
+++ b/main.html
@@ -7,10 +7,29 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+	<h1>Internship form </h1>
+	<label for="first-name-input"> First Name</label>
+	<input type="text" id=" first-name-input" required>
+	<label for="last-name-input"> Last Name</label>
+	<input type="text" id=" last-name-input" required>
+	<label for="email-input"> Email Address</label>
+	<input type="email" id=" email-input" required>
+	<label for="college-input"> College</label>
+	<input type="email" id=" college-input" required>
+	<label for="graduation-year">Graduation Year</label>
+	<select name="graduation-year" id="graduation-year" required>
+		<option value="2020">2020</option>
+		<option value="2021">2021</option>
+		<option value="2022">2022</option>
+		<option value="2023">2023</option>
+	  </select>
+	<label for="roll-no-input">Roll No.</label>
+	<input type="number" id="roll-no-input" required>
+	<input type="checkbox" name="checkbox" id="conditions-checkbox" required>
+	<label for="conditions-checkbox">Agree to terms and conditions</label>
+	<button class="btn btn-primary" type="submit">Submit form</button>
 
+	  
 </body>
 
 </html>
