--- a/main.html
+++ b/main.html
@@ -3,33 +3,101 @@
 <html>
 
 <head>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 	<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
 	<h1>Internship form </h1>
-	<label for="first-name-input"> First Name</label>
-	<input type="text" id=" first-name-input" required>
-	<label for="last-name-input"> Last Name</label>
-	<input type="text" id=" last-name-input" required>
-	<label for="email-input"> Email Address</label>
-	<input type="email" id=" email-input" required>
-	<label for="college-input"> College</label>
-	<input type="email" id=" college-input" required>
-	<label for="graduation-year">Graduation Year</label>
-	<select name="graduation-year" id="graduation-year" required>
-		<option value="2020">2020</option>
-		<option value="2021">2021</option>
-		<option value="2022">2022</option>
-		<option value="2023">2023</option>
-	  </select>
-	<label for="roll-no-input">Roll No.</label>
-	<input type="number" id="roll-no-input" required>
-	<input type="checkbox" name="checkbox" id="conditions-checkbox" required>
-	<label for="conditions-checkbox">Agree to terms and conditions</label>
-	<button class="btn btn-primary" type="submit">Submit form</button>
+	<form class="row g-3 needs-validation" novalidate>
+		<div class="col-md-4">
+		  <label for="validationCustom01 first-name-input" class="form-label">First name</label>
+		  <input type="text" class="form-control" id="validationCustom01 first-name-input"  required>
+		  <div class="valid-feedback">
+			Looks good!
+		  </div>
+		</div>
+		<div class="col-md-4">
+		  <label for="validationCustom02 last-name-input" class="form-label">Last name</label>
+		  <input type="text" class="form-control" id="validationCustom02 last-name-input " required>
+		  <div class="valid-feedback">
+			Looks good!
+		  </div>
+		</div>
+		<div class="col-md-4">
+		  <label for="validationCustomUsername email-input" class="form-label">Email Adress</label>
+		  <div class="input-group has-validation">
+			<input type="email" class="form-control" id="validationCustomUsername email-input" aria-describedby="inputGroupPrepend" required>
+			<div class="invalid-feedback">
+			  Please choose a email.
+			</div>
+		  </div>
+		</div>
+		<div class="col-md-6">
+		  <label for="validationCustom03 college-input" class="form-label">College</label>
+		  <input type="text" class="form-control" id="validationCustom03 college-input" required>
+		  <div class="invalid-feedback">
+			Please provide a valid college.
+		  </div>
+		</div>
+		<div class="col-md-3">
+		  <label for="validationCustom04 grad-year-select" class="form-label">Graduation Year</label>
+		  <select class="form-select" id="validationCustom04 grad-year-select" required>
+			<option selected disabled value="">Choose...</option>
+			<option>2020</option>
+			<option>2021</option>
+			<option>2022</option>
+			<option>2023</option>
+		  </select>
+		  <div class="invalid-feedback">
+			Please select a valid state.
+		  </div>
+		</div>
+		<div class="col-md-3">
+		  <label for="validationCustom05 roll-no-input" class="form-label">Roll No.</label>
+		  <input type="text" class="form-control" id="validationCustom05 roll-no-input" required>
+		  <div class="invalid-feedback">
+			Please provide a valid zip.
+		  </div>
+		</div>
+		<div class="col-12">
+		  <div class="form-check">
+			<input class="form-check-input" type="checkbox" value="" id="invalidCheck conditions-checkbox" required>
+			<label class="form-check-label conditions-checkbox" for="invalidCheck">
+			  Agree to terms and conditions
+			</label>
+			<div class="invalid-feedback">
+			  You must agree before submitting.
+			</div>
+		  </div>
+		</div>
+		<div class="col-12">
+		  <button class="btn btn-primary" type="submit">Submit form</button>
+		</div>
+	  </form>
+<script>
+	// Example starter JavaScript for disabling form submissions if there are invalid fields
+(function () {
+  'use strict'
 
-	  
+  // Fetch all the forms we want to apply custom Bootstrap validation styles to
+  var forms = document.querySelectorAll('.needs-validation')
+
+  // Loop over them and prevent submission
+  Array.prototype.slice.call(forms)
+    .forEach(function (form) {
+      form.addEventListener('submit', function (event) {
+        if (!form.checkValidity()) {
+          event.preventDefault()
+          event.stopPropagation()
+        }
+
+        form.classList.add('was-validated')
+      }, false)
+    })
+})()
+</script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
 
 </html>
