--- a/main.html
+++ b/main.html
@@ -11,39 +11,38 @@
 	<h1>Internship form </h1>
 	<form class="row g-3 needs-validation" novalidate>
 		<div class="col-md-4">
-		  <label for="validationCustom01 first-name-input" class="form-label">First name</label>
-		  <input type="text" class="form-control" id="validationCustom01 first-name-input"  required>
-		  <div class="valid-feedback">
-			Looks good!
+		  <label for=" first-name-input" class="form-label">First name</label>
+		  <input type="text" class="form-control" id="first-name-input"  required>
+		  <div class="invalid-feedback">
+			First Name required!
 		  </div>
 		</div>
 		<div class="col-md-4">
-		  <label for="validationCustom02 last-name-input" class="form-label">Last name</label>
-		  <input type="text" class="form-control" id="validationCustom02 last-name-input " required>
-		  <div class="valid-feedback">
-			Looks good!
+		  <label for=" last-name-input" class="form-label">Last name</label>
+		  <input type="text" class="form-control" id="last-name-input " required>
+		  <div class="invalid-feedback">
+			Last Name required!
 		  </div>
 		</div>
 		<div class="col-md-4">
-		  <label for="validationCustomUsername email-input" class="form-label">Email Adress</label>
+		  <label for=" email-input" class="form-label">Email Adress</label>
 		  <div class="input-group has-validation">
-			<input type="email" class="form-control" id="validationCustomUsername email-input" aria-describedby="inputGroupPrepend" required>
+			<input type="email" class="form-control" id="email-input" aria-describedby="inputGroupPrepend" required>
 			<div class="invalid-feedback">
-			  Please choose a email.
+			  Email required!
 			</div>
 		  </div>
 		</div>
 		<div class="col-md-6">
-		  <label for="validationCustom03 college-input" class="form-label">College</label>
-		  <input type="text" class="form-control" id="validationCustom03 college-input" required>
+		  <label for=" college-input" class="form-label">College</label>
+		  <input type="text" class="form-control" id="college-input" required>
 		  <div class="invalid-feedback">
 			Please provide a valid college.
 		  </div>
 		</div>
 		<div class="col-md-3">
-		  <label for="validationCustom04 grad-year-select" class="form-label">Graduation Year</label>
-		  <select class="form-select" id="validationCustom04 grad-year-select" required>
-			<option selected disabled value="">Choose...</option>
+		  <label for=" grad-year-select" class="form-label">Graduation Year</label>
+		  <select class="form-select" id=" grad-year-select" required>
 			<option>2020</option>
 			<option>2021</option>
 			<option>2022</option>
@@ -54,16 +53,16 @@
 		  </div>
 		</div>
 		<div class="col-md-3">
-		  <label for="validationCustom05 roll-no-input" class="form-label">Roll No.</label>
-		  <input type="text" class="form-control" id="validationCustom05 roll-no-input" required>
+		  <label for=" roll-no-input" class="form-label">Roll No.</label>
+		  <input type="text" class="form-control" id="roll-no-input" required>
 		  <div class="invalid-feedback">
 			Please provide a valid zip.
 		  </div>
 		</div>
 		<div class="col-12">
 		  <div class="form-check">
-			<input class="form-check-input" type="checkbox" value="" id="invalidCheck conditions-checkbox" required>
-			<label class="form-check-label conditions-checkbox" for="invalidCheck">
+			<input class="form-check-input" type="checkbox" value="" id="conditions-checkbox" required>
+			<label class="conditions-checkbox" for="conditions-checkbox">
 			  Agree to terms and conditions
 			</label>
 			<div class="invalid-feedback">
