--- a/main.html
+++ b/main.html
@@ -11,21 +11,21 @@
 	<h1>Internship form </h1>
 	<form class="row g-3 needs-validation" novalidate>
 		<div class="col-md-4">
-		  <label for="first-name-input" class="form-label">First name</label>
+		  <label for="first-name-input" class="form-label">First Name</label>
 		  <input type="text" class="form-control" id="first-name-input"  required>
 		  <div class="invalid-feedback">
 			First Name required!
 		  </div>
 		</div>
 		<div class="col-md-4">
-		  <label for="last-name-input" class="form-label">Last name</label>
-		  <input type="text" class="form-control" id="last-name-input " required>
+		  <label for="last-name-input" class="form-label">Last Name</label>
+		  <input type="text" class="form-control" id="last-name-input" required>
 		  <div class="invalid-feedback">
 			Last Name required!
 		  </div>
 		</div>
 		<div class="col-md-4">
-		  <label for="email-input" class="form-label">Email Adress</label>
+		  <label for="email-input" class="form-label">Email Address</label>
 		  <div class="input-group has-validation">
 			<input type="email" class="form-control" id="email-input" aria-describedby="inputGroupPrepend" required>
 			<div class="invalid-feedback">
@@ -42,21 +42,22 @@
 		</div>
 		<div class="col-md-3">
 		  <label for="grad-year-select" class="form-label">Graduation Year</label>
-		  <select class="form-select" id=" grad-year-select" required>
+		  <select class="form-select" id="grad-year-select" required>
+			<option selected disabled value="">Choose...</option>
 			<option>2020</option>
 			<option>2021</option>
 			<option>2022</option>
 			<option>2023</option>
 		  </select>
 		  <div class="invalid-feedback">
-			Please select a valid state.
+			Please select a valid Graduation Year.
 		  </div>
 		</div>
 		<div class="col-md-3">
 		  <label for="roll-no-input" class="form-label">Roll No.</label>
 		  <input type="text" class="form-control" id="roll-no-input" required>
 		  <div class="invalid-feedback">
-			Please provide a valid zip.
+			Please provide a valid Roll no.
 		  </div>
 		</div>
 		<div class="col-12">
